# 배운 거 집에서 복습 후 재 커밋

--- a/css-study/1. 스타일 적용하기/2. 기본 선택자/1. 전체, 태그 선택자.html
+++ b/css-study/1. 스타일 적용하기/2. 기본 선택자/1. 전체, 태그 선택자.html
@@ -8,11 +8,11 @@
     * {
       font-family: sans-serif;
       font-style: italic;
-      border: 1px solid black;
+      border: 1px solid black; /* *태그는 각각 한개씩을 선택한다.*/
     }
     body{
       color: red;
-      border: 1px solid #000;
+      border: 1px solid #000; /* body 태그는 전체 태그를 감싸서 하나로 하는 것.*/
     }
   </style>
 </head>
