--- a/css-study/1. 스타일 적용하기/2. 기본 선택자/2. 클래스, 아이디 선택자.html
+++ b/css-study/1. 스타일 적용하기/2. 기본 선택자/2. 클래스, 아이디 선택자.html
@@ -6,11 +6,11 @@
   <title>Document</title>
   <style>
     #apple {
-      background: red;;
+      background: red;; /* 아이디가 apple 인거들을 전부 바꿈*/
     }
     .orange {
       color: orange;
-      font-style: italic;
+      font-style: italic; /* 클래스가 오렌지면 전부 바꿈.*/
     }
     .big {
       font-size: 1.5em;
