--- a/css-study/1. 스타일 적용하기/2. 기본 선택자/3. 일치 선택자.html
+++ b/css-study/1. 스타일 적용하기/2. 기본 선택자/3. 일치 선택자.html
@@ -6,13 +6,13 @@
   <title>Document</title>
   <style>
    
-    li.orange {
+    li.orange { /* list 태그를 소유하며 클래스가 오렌지여야함.*/
       background: orange;
     }
-    #apple.green {
+    #apple.green { /* 아이디가 애플이며 클래스가 그린이여야함*/
       color: yellowgreen;
     }
-    h1.yellow.low#change.primary {
+    h1.yellow.low#change.primary { /* h1태그이며 클래스가 yellow,low,primary이고 아이디가 change 임.*/
       background: violet;
     }
 
