--- a/css-study/1. 스타일 적용하기/2. 기본 선택자/4. 자식 선택자.html
+++ b/css-study/1. 스타일 적용하기/2. 기본 선택자/4. 자식 선택자.html
@@ -12,14 +12,11 @@
         앞에는 전부 조건이다.
     */
     ul > .orange {
-      background: orange;
+      background: orange; /* ul 에 자식으로 클래스 오렌지가 해당임.*/
     }
 
-    body > div> ul> #apple {
+    body > div> ul> #apple { /* 바디태그 밑 div ul 밑 아이디가 apple임.*/
       color: red;
-    }
-    #circle>h1.title>.left.low>#banana {
-
     }
 
   </style>
