--- a/css-study/1. 스타일 적용하기/2. 기본 선택자/5. 후손 선택자.html
+++ b/css-study/1. 스타일 적용하기/2. 기본 선택자/5. 후손 선택자.html
@@ -11,7 +11,7 @@
         - 가장 마지막 선택자가 타겟이고
         앞에는 전부 조건이다.
     */
-    div .orange {
+    div .orange { /* 자식이랑 다르게 div밑에 클래스가 오렌지면 가능함.*/
       background: orange;
     }
 
