--- a/css-study/1. 스타일 적용하기/2. 기본 선택자/7. 속성 선택자.html
+++ b/css-study/1. 스타일 적용하기/2. 기본 선택자/7. 속성 선택자.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 
  <style>
-    [type=password] {
+    [type=password] { /* 타입이 password 여야 선택함.*/
       color: red;
       width: 100px;
     }
