--- a/css-study/1. 스타일 적용하기/3. 가상 수도클래스 선택자/2. nth-child.html
+++ b/css-study/1. 스타일 적용하기/3. 가상 수도클래스 선택자/2. nth-child.html
@@ -7,18 +7,18 @@
 
   <style>
 
-    #fruits li:nth-child(1) {
+    #fruits li:nth-child(1) { /* id가 프룻인 li 태그중에서 1번째요소를 선택.*/
       color: red;
     }
 
-    #food li:last-child {
+    #food li:last-child { /* id가 푸드인 리슽트중 마지막을 선택.*/
       background: olive;
     }
     
-    #fruits li:nth-child(2n){
+    #fruits li:nth-child(2n){ /* id가 프룻이고 리스트중에 2번씩 반복 하면서 선택*/
       background: aqua;
     }
-    #food li:not(.melon){
+    #food li:not(.melon){ /* 아이디가 food이고 리스트중에서 클래스 melon을제외하고 전부*/
       list-style: none;
     }
   </style>
