--- a/css-study/1. 스타일 적용하기/3. 가상 수도클래스 선택자/3. before,after.html
+++ b/css-study/1. 스타일 적용하기/3. 가상 수도클래스 선택자/3. before,after.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    li::before {
+    li::before { /* li태그를 선택한 후 앞에 번호라는 글자열을 추가함.*/
       content: '번호';
     }
-    li::after {
+    li::after { /* li 태그를 선택 후 뒤에 옵션 추가.*/
       width: 10px;
       height: 10px;
       background: red;
