--- a/css-study/1. 스타일 적용하기/3. 가상 수도클래스 선택자/1. hover, active, focus.html
+++ b/css-study/1. 스타일 적용하기/3. 가상 수도클래스 선택자/1. hover, active, focus.html
@@ -23,11 +23,11 @@
   }
   .box:hover {
     width: 200px;
-    background: orange;
+    background: orange; /* 마우스 올리면 이벤트를 줌*/
   }
   .box:active {
     height: 200px;
-    background: yellowgreen;
+    background: yellowgreen; /* 클릭했을 때 이벤트를 줌*/
   }
 
   #common {
@@ -39,7 +39,7 @@
   }
   #common:focus {
     border-color: red;
-    width: 200px;
+    width: 200px; /* input 창에 마우스를 누르면 이벤트를 줌*/
   }
  </style>
 <body>
